0.2.0
  BugFix: anchor navigation fixes.
  BugFix: the name of some dependencies were not being shown correctly.
  BugFix: list of dependencies was not sorted.
  BugFix: outdated pkg list was not sorted.
  BugFix: When user closed searchbar inside a QTextBrowser, cursor position was reseted.
  BugFix: Do not refresh pkg lists while clicking remote/local buttons.
  BugFix: Fix gksu "-- f parameter" execution error.
  Added GhostBSD support (thanks to ringo32 and rkramerbsd). 
  Added search feature also in Information tab.
  Heavily threaded version, minimizing interface freezing.

0.1.0 
  Initial Proof of Concept release.